Fixes typing ("Vorrübergehend" has to be "Vorübergehend")
Unforetunately, I don't know about the translation software you use, so maybe you could please send this to somebody responsible for translations, thanks!

--- a/src/cascadia/TerminalApp/Resources/de-DE/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/de-DE/Resources.resw
@@ -144,7 +144,7 @@
 </value>
   </data>
   <data name="UsingDefaultSettingsText" xml:space="preserve">
-    <value>Vorrübergehend werden die Standardeinstellungen für Windows-Terminal verwendet.</value>
+    <value>Vorübergehend werden die Standardeinstellungen für Windows-Terminal verwendet.</value>
   </data>
   <data name="InitialJsonParseErrorTitle" xml:space="preserve">
     <value>Fehler beim Laden der Einstellungen</value>
@@ -926,4 +926,5 @@
   <data name="InvalidRegex" xml:space="preserve">
     <value>Ein ungültiger regulärer Ausdruck wurde entdeckt.</value>
   </data>
+
 </root>
