Add --session option to focus-tab command
Adds the ability to focus a tab by its WT_SESSION GUID, enabling external
processes (like AI coding agents) to programmatically return users to
the correct terminal tab.

Usage: wt focus-tab --session <guid>
   or: wt ft -s <guid>

Changes:
- Added --session/-s option to focus-tab CLI parser
- Extended SwitchToTabArgs with SessionId property
- Added FocusPaneBySessionId() to Tab class to walk pane tree
- Modified _HandleSwitchToTab to lookup by session ID
- Auto-routes to existing window (implicit -w 0) for session targeting
- Added unit tests for --session parsing

Fixes #19783

--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -318,6 +318,9 @@
   <data name="CmdFocusTabTargetArgDesc" xml:space="preserve">
     <value>Move focus the tab at the given index</value>
   </data>
+  <data name="CmdFocusTabSessionArgDesc" xml:space="preserve">
+    <value>Move focus to the tab containing the given WT_SESSION GUID</value>
+  </data>
   <data name="CmdMovePaneTabArgDesc" xml:space="preserve">
     <value>Move focused pane to the tab at the given index</value>
   </data>
