Add focusBellTab action to navigate to tabs with bell indicators
Adds a new action that jumps to the next tab showing a bell indicator (🔔).
Useful when multiple background processes signal completion via bell.

- New action: focusBellTab
- Default keybinding: Ctrl+Shift+B
- Cycles through all tabs with bells, wrapping around
- Does nothing if no bells are active

--- a/src/cascadia/TerminalSettingsModel/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsModel/Resources/en-US/Resources.resw
@@ -340,6 +340,9 @@
   <data name="PrevTabCommandKey" xml:space="preserve">
     <value>Previous tab</value>
   </data>
+  <data name="FocusBellTabCommandKey" xml:space="preserve">
+    <value>Focus next bell tab</value>
+  </data>
   <data name="RenameTabCommandKey" xml:space="preserve">
     <value>Rename tab to "{0}"</value>
     <comment>{0} will be replaced with a user-defined string</comment>
