--- a/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
@@ -1766,6 +1766,10 @@
     <value>Keybindings</value>
     <comment>Name for a control which contains the list of keybindings for the current command.</comment>
   </data>
+  <data name="Actions_CommandDetails.Text" xml:space="preserve">
+    <value>Command details</value>
+    <comment>Label for the list of editable command details for the current command. This includes the command name and the shortcut action type.</comment>
+  </data>
   <data name="Actions_Arguments.Text" xml:space="preserve">
     <value>Additional arguments</value>
     <comment>Label for the list of editable arguments for the currently selected action.</comment>
