--- a/src/cascadia/TerminalApp/Resources/sr-Cyrl-RS/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/sr-Cyrl-RS/Resources.resw
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="InitialJsonParseErrorText" xml:space="preserve">
-    <value>Подешавања нису могла да се учитау из фајла. Проверите има ли синтаксних грешака, укључујући запете на крају реда.</value>
+    <value>Подешавања нису могла да се учитају из фајла. Проверите има ли синтаксних грешака, укључујући запете на крају реда.</value>
   </data>
   <data name="MissingDefaultProfileText" xml:space="preserve">
     <value>У листи профила није могао да се пронађе ваш подразумевани профил - користи се први профил. Проверите да ли се "defaultProfile" подудара са GUID неког од ваших профила.</value>
@@ -141,19 +141,13 @@
     <value>Подешавања нису могла поново да се учитају из фајла. Проверите има ли синтаксних грешака, укључујући запете на крају реда.</value>
   </data>
   <data name="UsingDefaultSettingsText" xml:space="preserve">
-    <value>Привремено се користе подразумевана подешавања Windows Терминала.</value>
+    <value>Привремено се користе подразумевана подешавања апликације Windows Терминал.</value>
   </data>
   <data name="InitialJsonParseErrorTitle" xml:space="preserve">
     <value>Није успело учитавање подешавања</value>
   </data>
   <data name="SettingsValidateErrorTitle" xml:space="preserve">
     <value>Наишло се на грешке током учитавања корисничких подешавања</value>
-  </data>
-  <data name="KeyboardServiceDisabledDialog.PrimaryButtonText" xml:space="preserve">
-    <value>ОК</value>
-  </data>
-  <data name="KeyboardServiceDisabledDialog.Title" xml:space="preserve">
-    <value>Упозорење:</value>
   </data>
   <data name="KeyboardServiceWarningText" xml:space="preserve">
     <value>„{0}” се не извршава на вашој машини. Због тога Терминал можда неће моћи да прима улаз са тастатуре.</value>
@@ -165,27 +159,11 @@
   <data name="ReloadJsonParseErrorTitle" xml:space="preserve">
     <value>Није успело поновно учитавање подешавања</value>
   </data>
-  <data name="FeedbackUriValue" xml:space="preserve">
-    <value>https://go.microsoft.com/fwlink/?linkid=2125419</value>
-    <comment>{Locked}This is a FWLink, so it will be localized with the fwlink tool</comment>
-  </data>
   <data name="AboutMenuItem" xml:space="preserve">
     <value>О програму</value>
   </data>
-  <data name="FeedbackMenuItem" xml:space="preserve">
-    <value>Повратне информације</value>
-  </data>
   <data name="SettingsMenuItem" xml:space="preserve">
     <value>Подешавања</value>
-  </data>
-  <data name="Cancel" xml:space="preserve">
-    <value>Откажи</value>
-  </data>
-  <data name="CloseAll" xml:space="preserve">
-    <value>Затвори све</value>
-  </data>
-  <data name="Quit" xml:space="preserve">
-    <value>Напусти</value>
   </data>
   <data name="MultiplePanes" xml:space="preserve">
     <value>Више панела</value>
@@ -292,17 +270,6 @@
   <data name="UnknownTheme" xml:space="preserve">
     <value>• Наведена "theme" није пронађена у листи тема. Привремено се употребљава подразумевана вредност.</value>
     <comment>{Locked="•"} This glyph is a bullet, used in a bulleted list.</comment>
-  </data>
-  <data name="LegacyGlobalsProperty" xml:space="preserve">
-    <value>Особина "globals" је застарела - ваша подешавања би требало да се ажурирају. </value>
-    <comment>{Locked="\"globals\""} </comment>
-  </data>
-  <data name="LegacyGlobalsPropertyHrefUrl" xml:space="preserve">
-    <value>https://go.microsoft.com/fwlink/?linkid=2128258</value>
-    <comment>{Locked}This is a FWLink, so it will be localized with the fwlink tool</comment>
-  </data>
-  <data name="LegacyGlobalsPropertyHrefLabel" xml:space="preserve">
-    <value>За више информација, погледајте следећу веб страницу.</value>
   </data>
   <data name="FailedToParseCommandJson" xml:space="preserve">
     <value>Није успело развијање команде којој је постављено "iterateOn". Ова команда ће се игнорисати.</value>
@@ -484,20 +451,11 @@
   <data name="ElevatedRun.Text" xml:space="preserve">
     <value>Ctrl+Клик да отворите као администратор</value>
   </data>
-  <data name="WindowCloseButton.[using:Windows.UI.Xaml.Automation]AutomationProperties.Name" xml:space="preserve">
-    <value>Затвори</value>
-  </data>
   <data name="WindowCloseButton.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
     <value>Затвори</value>
   </data>
   <data name="WindowCloseButtonToolTip.Text" xml:space="preserve">
     <value>Затвори</value>
-  </data>
-  <data name="WindowMaximizeButton.[using:Windows.UI.Xaml.Automation]AutomationProperties.Name" xml:space="preserve">
-    <value>Увећај</value>
-  </data>
-  <data name="WindowMinimizeButton.[using:Windows.UI.Xaml.Automation]AutomationProperties.Name" xml:space="preserve">
-    <value>Умањи</value>
   </data>
   <data name="WindowMinimizeButton.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
     <value>Умањи</value>
@@ -517,10 +475,6 @@
   <data name="AboutDialog_VersionLabel.Text" xml:space="preserve">
     <value>Верзија:</value>
     <comment>This is the heading for a version number label</comment>
-  </data>
-  <data name="AboutDialog_GettingStartedLink.Content" xml:space="preserve">
-    <value>Брзи почетак</value>
-    <comment>A hyperlink name for a guide on how to get started using Terminal</comment>
   </data>
   <data name="AboutDialog_SourceCodeLink.Content" xml:space="preserve">
     <value>Изворни кôд</value>
@@ -600,7 +554,7 @@
     <value>Откуцајте име команде...</value>
   </data>
   <data name="CommandPalette_NoMatchesText.Text" xml:space="preserve">
-    <value>Нема команди које се подударају</value>
+    <value>Ниједна команда се не подудара</value>
   </data>
   <data name="CommandPaletteModeAnnouncement_ActionMode" xml:space="preserve">
     <value>Акција режим претраге</value>
@@ -797,17 +751,8 @@
   <data name="ExportTabText" xml:space="preserve">
     <value>Извези текст</value>
   </data>
-  <data name="ExportFailure" xml:space="preserve">
-    <value>Није успео извоз садржаја терминала</value>
-  </data>
-  <data name="ExportSuccess" xml:space="preserve">
-    <value>Успешно је извезен садржај терминала</value>
-  </data>
   <data name="FindText" xml:space="preserve">
     <value>Пронађи</value>
-  </data>
-  <data name="PlainText" xml:space="preserve">
-    <value>Чисти текст</value>
   </data>
   <data name="CloseOnExitInfoBar.Message" xml:space="preserve">
     <value>Понашање при прекиду извршавања може да се подеси у напредним подешавањима профила.</value>
@@ -913,10 +858,6 @@
   <data name="TerminalPage_TabMovedAnnouncement_Direction" xml:space="preserve">
     <value>Картица "{0}" је премештена на позицију "{1}"</value>
     <comment>{Locked="{0}"}{Locked="{1}"}This text is read out by screen readers upon a successful tab movement. {0} is the name of the tab. {1} is the new tab index in the tab row.</comment>
-  </data>
-  <data name="TerminalPage_PaneMovedAnnouncement_ExistingWindow" xml:space="preserve">
-    <value>Активни панел је премештен у картицу "{0}" у прозору "{1}"</value>
-    <comment>{Locked="{0}"}{Locked="{1}"}This text is read out by screen readers upon a successful pane movement. {0} is the name of the tab the pane was moved to. {1} is the name of the window the pane was moved to. Replaced in 1.19 by TerminalPage_PaneMovedAnnouncement_ExistingWindow2</comment>
   </data>
   <data name="TerminalPage_PaneMovedAnnouncement_ExistingWindow2" xml:space="preserve">
     <value>Активни панел је премештен у прозор "{0}"</value>
