--- a/src/cascadia/TerminalSettingsModel/Resources/sr-Cyrl-RS/Resources.resw
+++ b/src/cascadia/TerminalSettingsModel/Resources/sr-Cyrl-RS/Resources.resw
@@ -1,17 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!--
-    Microsoft ResX Schema
-
+  <!-- 
+    Microsoft ResX Schema 
+    
     Version 2.0
-
-    The primary goals of this format is to allow a simple XML format
-    that is mostly human readable. The generation and parsing of the
-    various data types are done through the TypeConverter classes
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
     associated with the data types.
-
+    
     Example:
-
+    
     ... ado.net/XML headers & schema ...
     <resheader name="resmimetype">text/microsoft-resx</resheader>
     <resheader name="version">2.0</resheader>
@@ -26,36 +26,36 @@
         <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
         <comment>This is a comment</comment>
     </data>
-
-    There are any number of "resheader" rows that contain simple
+                
+    There are any number of "resheader" rows that contain simple 
     name/value pairs.
-
-    Each data row contains a name, and value. The row also contains a
-    type or mimetype. Type corresponds to a .NET class that support
-    text/value conversion through the TypeConverter architecture.
-    Classes that don't support this are serialized and stored with the
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
     mimetype set.
-
-    The mimetype is used for serialized objects, and tells the
-    ResXResourceReader how to depersist the object. This is currently not
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
     extensible. For a given mimetype the value must be set accordingly:
-
-    Note - application/x-microsoft.net.object.binary.base64 is the format
-    that the ResXResourceWriter will generate, however the reader can
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
     read any of the formats listed below.
-
+    
     mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with
+    value   : The object must be serialized with 
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
-
+    
     mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with
+    value   : The object must be serialized with 
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
             : and then encoded with base64 encoding.
 
     mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array
+    value   : The object must be serialized into a byte array 
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
@@ -172,7 +172,7 @@
   </data>
   <data name="MoveTabCommandKey" xml:space="preserve">
     <value>Премести картицу {0}</value>
-    <comment>{0} will be replaced with a "forward" / "backward"</comment>
+    <comment>{0} will be replaced with a "forward (right)" / "backward (left)"</comment>
   </data>
   <data name="MoveTabToWindowCommandKey" xml:space="preserve">
     <value>Премести картицу у прозор „{0}”</value>
@@ -182,10 +182,10 @@
     <value>Премести картицу у нови прозор</value>
   </data>
   <data name="MoveTabDirectionForward" xml:space="preserve">
-    <value>унапред</value>
+    <value>унапред (десно)</value>
   </data>
   <data name="MoveTabDirectionBackward" xml:space="preserve">
-    <value>уназад</value>
+    <value>уназад (лево)</value>
   </data>
   <data name="CloseTabsAfterDefaultCommandKey" xml:space="preserve">
     <value>Затвори све картице након текуће картице</value>
@@ -482,16 +482,16 @@
     <value>Искључи пун екран</value>
   </data>
   <data name="EnableMaximizedCommandKey" xml:space="preserve">
-    <value>Максимизуј прозор</value>
+    <value>Увећај прозор</value>
   </data>
   <data name="DisableMaximizedCommandKey" xml:space="preserve">
-    <value>Врати величину максимизованог прозор</value>
+    <value>Врати величину увећаног прозор</value>
   </data>
   <data name="ToggleSplitOrientationCommandKey" xml:space="preserve">
     <value>Укљ./искљ. оријентацију поделе панела</value>
   </data>
   <data name="TogglePaneZoomCommandKey" xml:space="preserve">
-    <value>Укљ./искљ. зумирање панела</value>
+    <value>Укљ./искљ. зум у панел</value>
   </data>
   <data name="TogglePaneReadOnlyCommandKey" xml:space="preserve">
     <value>Укљ./искљ. режим панела само-за-читање</value>
@@ -540,7 +540,7 @@
     <comment>{0} will be replaced with a user-specified file path</comment>
   </data>
   <data name="ExportBufferCommandKey" xml:space="preserve">
-    <value>Извоз текста</value>
+    <value>Извези текст</value>
   </data>
   <data name="ClearAllCommandKey" xml:space="preserve">
     <value>Очисти бафер</value>
@@ -702,7 +702,7 @@
     <comment>When enabled, input will go to all panes in this tab simultaneously</comment>
   </data>
   <data name="RestartConnectionKey" xml:space="preserve">
-    <value>Поново успостави везу</value>
+    <value>Поново покрени везу</value>
   </data>
   <data name="OpenScratchpadKey" xml:space="preserve">
     <value>Отвори простор за скицирање</value>
@@ -890,7 +890,7 @@
     <value>Режим покретања</value>
   </data>
   <data name="NameActionArgumentLocalized" xml:space="preserve">
-    <value>Назив</value>
+    <value>Име</value>
   </data>
   <data name="KeyChordActionArgumentLocalized" xml:space="preserve">
     <value>Акорд тастера</value>
@@ -902,7 +902,7 @@
     <value>Користи Командну линију</value>
   </data>
   <data name="SwitcherModeActionArgumentLocalized" xml:space="preserve">
-    <value>Режим пребацивачае</value>
+    <value>Режим пребацивача</value>
   </data>
   <data name="QueryUrlActionArgumentLocalized" xml:space="preserve">
     <value>URL за упит</value>
