--- a/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
@@ -1780,7 +1780,7 @@
   </data>
   <data name="Actions_AdditionalKeyChords" xml:space="preserve">
     <value>and {} more</value>
-    <comment>Text that will be read out by a screen reader indicating that additional keybinds exist for this command. {} will be replaced by the number of additional keybindings.</comment>
+    <comment>Text that will be read out by a screen reader indicating that additional keybindings exist for this command. {} will be replaced by the number of additional keybindings.</comment>
   </data>
   <data name="Actions_DeleteConfirmationButton.Content" xml:space="preserve">
     <value>Yes, delete key binding</value>
