Fix UI localization issues (#19756)
- Remove hardcoded 'Custom' and 'OK' button text in ColorPickupFlyout
- Add OkButton.Content resource entries to all language files
- Add search tool for finding non-localized UI strings
- Add documentation for double ampersand fix patterns

This fixes issue #19756 where right-click menu UI elements were not properly localized.

--- a/src/cascadia/TerminalApp/Resources/de-DE/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/de-DE/Resources.resw
@@ -246,6 +246,9 @@
   <data name="TabColorClearButton.Content" xml:space="preserve">
     <value>Zurücksetzen</value>
   </data>
+  <data name="OkButton.Content" xml:space="preserve">
+    <value>OK</value>
+  </data>
   <data name="RenameTabText" xml:space="preserve">
     <value>Registerkarte umbenennen</value>
   </data>
